<resources>
    <string name="app_name">LoginParking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="avaliable">ว่าง</string>
    <string name="non">ไม่ว่าง</string>
    <string name="no">ทะเบียน</string>
    <string name="owner">เจ้าของ</string>
    <string name="tel">เบอร์โทร</string>
    <string name="update">Update</string>
    <string name="del">Delete</string>
    <string name="info">Info</string>
    <string name="des">img</string>
</resources>
