<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="myPark" type="buu.informatics.s59160090.loginparking.Park"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" style="@style/bg">
        <Button
            android:text="@string/avaliable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPark3"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonPark2"
            app:layout_constraintStart_toEndOf="@+id/buttonPark2"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:fontFamily="@font/roboto"
            style="@style/parking"/>
        <Button
            android:text="@string/avaliable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/buttonPark2"
            app:layout_constraintStart_toEndOf="@+id/buttonPark1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/buttonPark3" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:fontFamily="@font/roboto" style="@style/parking"/>
        <Button
            android:text="@string/avaliable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPark1"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonPark2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/buttonPark2"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:fontFamily="@font/roboto"
            style="@style/parking"/>

        <EditText
            android:id="@+id/editText1"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:autoText="false"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/no"
            android:inputType="textPersonName"
            android:text="@={myPark.no}"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editText2"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/owner"
            android:inputType="textPersonName"
            android:text="@={myPark.owner}"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText3"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/tel"
            android:inputType="textPersonName"
            android:text="@={myPark.tel}"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/buttonDel"
            style="@style/del"
            android:layout_width="261dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/del"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />

        <Button
            android:id="@+id/buttonUpdate"
            style="@style/update"
            android:layout_width="261dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/update"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tel"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/owner"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/no"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPark1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>